# advent

./: .gitignore  netlify.toml
2019/: Cargo.toml
2019/src/: intcode.rs  lib.rs
2021/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24-nonumpy.py  24-test.txt  24.py  25.py  README.md  pyproject.toml
2022/: Cargo.toml
2022/src/: bitset.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs  tiles.rs
2023/: build.zig  build.zig.zon
2023/src/: 01.zig  02.zig  04.zig  05.zig  _skeleton.zig  advent.zig  day01.zig  day02.zig  day03.zig  day04.zig  day05.zig  day06.zig  day07.zig  day08.zig  day09.zig  day10.zig  day11.zig  day12.zig  day14.zig  day15.zig  grid.zig  gridlib.zig  main.zig
2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  README.md  adventlib.py  pyproject.toml
blog/: Pipfile  pelicanconf.py
blog/content/: trillion-with-python.md
blog/content/trillion/: trillion-array.py  trillion-list-dedup.py  trillion-list.py  trillion-naive.py  trillion-numpy-sort.py  trillion-numpy.py  trillion-panda.py
blog/pelican-simplegrey/static/css/: main.css
blog/pelican-simplegrey/templates/: base.html
