[tool.poetry]
name = "advent2021"
version = "0.1.0"
description = ""
authors = ["matejcik <ja@matejcik.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^8.12.0"
pytest = "^6.2.5"
contexttimer = "^0.3.3"

[tool.poetry.dev-dependencies]
ipython = "*"
jupyter = "^1.0.0"
black = "^21.11b1"

[tool.black]
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
