[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0.1"
clap = { version = "4.0.29", features = ["derive"] }
num-traits = "0.2.15"
prettytable-rs = "0.9.0"
