[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
bit-vec = "0.6.3"
bstr = "1.0.1"
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
itertools = "0.10.5"
num-traits = "0.2.15"
prettytable-rs = "0.9.0"
rayon = "1.6.1"
