[tool.poetry]
name = "advent2024"
version = "0.1.0"
description = ""
authors = ["matejcik <ja@matejcik.cz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
